test(server): verify shutdown lock retention
Exercise natural and SIGTERM shutdown with a real admitted write, final
call completion and independent lock probes. Keep fixture cleanup owned
until its processes and helpers finish.

Document completion waits and supervisor grace using the measured LOCAL
workload, with separate owner and outer shutdown intervals.

Signed-off-by: luinstra <luinstra@gmail.com>